2011-05-17  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build int] Decruft: Don't check for ‘scm_ptob_descriptor.fill_input’.

	* configure.ac: Remove obsolete/unused check for
	‘struct scm_ptob_descriptor’ member ‘fill_input’.

2011-05-17  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build int] Make checks for <guile/FOO.h> more precise.

	* configure.ac (PG_CHECK_GUILE_HEADER): New AC_DEFUN.
	(HAVE_GUILE_GH_H): New PG_CHECK_GUILE_HEADER.
	(HAVE_GUILE_MODSUP_H): Likewise.
	(GUILE_MODSUP_H): Delete macro call.

2011-05-17  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build int] Conditionalize check for ‘terminating’.

	* configure.ac: Don't bother checking for
	‘terminating’ if ‘scm_terminating’ is available.

2011-05-17  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build int] Decruft: Don't bother with ‘scm_gc_protect_object’.

	* configure.ac (scm_gc_protect_object): Delete AC_CHECK_DECL.
	(HAVE_SCM_GC_PROTECT_OBJECT): Delete AC_DEFINE.

2011-05-17  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build int] Use ‘AC_CHECK_DECLS’ for ‘scm_terminating’.

	* configure.ac (HAVE_SCM_TERMINATING): Delete AC_DEFINE.
	(scm_terminating): Use ‘AC_CHECK_DECLS’.

2011-05-17  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[maint] Inline AC_GUILE_PG_[BB]COMPAT into configure.ac.

	* build-aux/guile-pg.m4 (AC_GUILE_PG_BCOMPAT)
	(AC_GUILE_PG_FCOMPAT): Incorporate these AC_DEFUNs from here...
	* configure.ac: ...to here, at top-level.

2011-05-16  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[maint] Upgrade m4 to avoid obsolete constructs; use autoreconf.

	* build-aux/guile-pg.m4
	(PQ_FLAGS): Use ‘AS_HELP_STRING’, ‘AC_MSG_ERROR’.
	(AC_GUILE_PG_BCOMPAT): Use ‘AC_COMPILE_IFELSE’, ‘AC_LANG_PROGRAM’.
	* configure.ac (AM_CONFIG_HEADER): Replace with ‘AC_CONFIG_HEADERS’.
	(AC_STDC_HEADERS): Replace with ‘AC_HEADER_STDC’.
	(AC_HAVE_HEADERS): Replace with ‘AC_CHECK_HEADERS’.
	* autogen.sh: Do ‘set -e’; replace libtoolize, aclocal, autoheader,
	autoconf, and automake invocations with one autoreconf invocation.
