@@ -1,5 +1,15 @@
 2011-05-17  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
+	[build] Don't chmod +x test/{runtest,show-platform}.
+
+	* configure.ac (AC_CONFIG_FILES):
+	Add test/runtest, test/show-platform.
+	(test/show-platform): Delete AC_GUILE_PG_CONFIG_SCRIPT.
+	(test/runtest): Likewise.
+	* build-aux/guile-pg.m4 (AC_GUILE_PG_CONFIG_SCRIPT): Delete AC_DEFUN.
+
+2011-05-17  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
 	[build int] Decruft: Don't check for ‘scm_ptob_descriptor.fill_input’.
 
 	* configure.ac: Remove obsolete/unused check for
